# pyplis

./: .flake8  .gitignore  .pydocstyle  .pytest  .readthedocs.yml  .travis.yml  CHANGELOG.rst  CHANGELOG_v0_11_2_v1_0_0.rst  CHANGELOG_v0_9_2_v0_11_2.rst  INSTALL.rst  MANIFEST.in  README.rst  TODO.rst  VERSION.rst  cam_def.txt  pylintrc  pyplis_env.yml  pyplis_env_py27.yml  pyplis_env_py3.yml  pyproject.toml  readthedocs.yml  requirements.txt  setup.py  test-requirements.txt  tox.ini  ~$plis improvements.docx
_docs_sorted_out/: Introduction_cameras.rst  removed_from_paper.rst  so2cambasics.rst
changelog/: CHANGELOG.rst  CHANGELOG_v0_11_2_v1_0_0.rst  CHANGELOG_v0_9_2_v0_11_2.rst  CHANGELOG_v130_v143.rst  CHANGELOG_v143_v144.rst  CHANGELOG_v1_0_0_v1_3_0.rst
docs/: Literature.bib  Makefile  api.rst  camdef.rst  changelog.rst  code_gui.rst  code_lib.rst  conf.py  contributing.rst  examples.rst  fname_conventions.xls  fname_conventions.xlsx  further_reading.rst  gallery.rst  index.rst  intro.rst  intro_datastructure.rst  make.bat  requirements.txt  supplemental.rst  tut_camdef.rst  tutorials.rst
piscope/: __init__.py  calibration.py  cellcalib.py  dataset.py  dilutioncorr.py  doascalib.py  doasfov.py  exceptions.py  fitting.py  fluxcalc.py  forms.py  geometry.py  helpers.py  image.py  imagelists.py  inout.py  model_functions.py  optimisation.py  plumebackground.py  plumespeed.py  processing.py  setupclasses.py  utils.py
pyplis/: CameraBaseInfo.py  __init__.py  _init_utils.py  base_img_list.py  calib_base.py  camera_base_info.py  cellcalib.py  custom_image_import.py  dataset.py  dilutioncorr.py  doascalib.py  exceptions.py  fluxcalc.py  forms.py  geometry.py  glob.py  helpers.py  image.py  image_import.py  imagelists.py  inout.py  model_functions.py  optimisation.py  optimisation_old.py  plumebackground.py  plumespeed.py  processing.py  setupclasses.py  untitled0.py  utils.py
scripts/: README.rst  RUN_EXAMPLE_SCRIPTS.py  RUN_INTRO_SCRIPTS.py  SETTINGS.py  ex00_RUN_ALL_WIN.bat  ex00_RUN_EXAMPLES_WIN.bat  ex00_RUN_INTRO_SCRIPTS_WIN.bat  ex01_analysis_setup.py  ex01_measurement_setup_plume_data.py  ex02_meas_geometry.py  ex02_measurement_geometry.py  ex03_plume_background.py  ex04_prep_aa_imglist.py  ex04_prepare_aa_imglist.py  ex05_2_cellcalib_auto.py  ex05_cell_calib_auto.py  ex06_doas_calib.py  ex06_doas_calibration.py  ex07_doas_cell_calib.py  ex07_doas_cell_calib_combi.py  ex08_plume_speed_crosscorr.py  ex08_plumevelo_crosscorr.py  ex08_velo_crosscorr.py  (+51 more)
(+340 files in other folders)
